data/derived/sp14/progs/unify/prog1482.ml.out
Characters 159-160:
  let (_, res) = List.fold_left f base args in
                                ^
Error: This expression has type int list * 'a -> int -> int
       but an expression was expected of type
         int list * 'a -> int -> int list * 'a
       Type int is not compatible with type int list * 'a 
